<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_back"
        android:padding="@dimen/_20sdp"
        tools:context=".presentation.home.view.dialog.LanguageBottomSheetDialog">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/montserrat_medium" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeDialog"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_close" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/selected_language"
            android:textColor="@color/languageHeader"
            android:textSize="@dimen/_13ssp"
            app:fontFamily="@font/montserrat_regular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/languageRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_above="@+id/bottomButton"
            android:layout_below="@id/header"
            android:layout_marginTop="@dimen/_4sdp"
            tools:itemCount="5"
            tools:listitem="@layout/item_language" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_back"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_continue_primary"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>