<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.country.view.activity.CountryPickerActivity">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/selectYourCountry"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/montserrat_semi_bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/enterYourCountryName"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:background="@drawable/search_edit_back"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/textGray"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_country" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_country_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sorryNoDataFound"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>