<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/introductionViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/_20sdp"
                app:piv_animationType="worm"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="@color/white"
                app:piv_unselectedColor="@color/whiteTransparent"
                app:piv_viewPager="@id/introductionViewPager"
                attrs:piv_padding="@dimen/_6sdp"
                attrs:piv_radius="@dimen/_6sdp" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/login_back"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/verificationMsg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:fontFamily="@font/montserrat_semi_bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/verificationSubMsg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:fontFamily="@font/montserrat_regular" />

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otpView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:bar_enabled="false"
                    app:bar_height="2dp"
                    app:height="@dimen/_36sdp"
                    app:length="5"
                    app:otp_box_background="@drawable/otp_back"
                    app:width="@dimen/_36sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/otpNotReceive"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:fontFamily="@font/montserrat_regular" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/diffNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/diffNumber"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:fontFamily="@font/montserrat_semi_bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>