<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.home.view.fragment.SearchFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/search_back"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_search" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/search"
                    android:maxLines="@integer/material_motion_duration_long_1"
                    android:textColor="@color/headerColor"
                    android:textSize="@dimen/_12ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/_60sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/trending"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trendingRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_trending" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/otherPosts"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/otherRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:overScrollMode="never" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>