<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_logo_primary" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/searchOpen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/search_back"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_search" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/search"
                    android:textColor="@color/headerColor"
                    android:textSize="@dimen/_12ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/homeCalender"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:src="@drawable/ic_calendar" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/homeLanguage"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:src="@drawable/ic_language" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/homeHelp"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_help" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/switchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titlePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/photo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/montserrat_semi_bold" />

            <com.suke.widget.SwitchButton
                android:id="@+id/switchFeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:sb_background="@color/searchBackColor"
                app:sb_button_color="@color/colorPrimary"
                app:sb_checked="false"
                app:sb_checked_color="@color/searchBackColor"
                app:sb_show_indicator="false"
                app:sb_uncheck_color="@color/searchBackColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/video"
                android:textColor="@color/headerColor"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/montserrat_semi_bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feedRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/switchLayout"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/_60sdp"
            tools:listitem="@layout/item_feed" />

        <include
            android:id="@+id/containerCalender"
            layout="@layout/layout_calender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolBar" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</layout>