<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/introductionViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/_20sdp"
                app:piv_animationType="worm"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="@color/white"
                app:piv_unselectedColor="@color/whiteTransparent"
                app:piv_viewPager="@id/introductionViewPager"
                attrs:piv_padding="@dimen/_6sdp"
                attrs:piv_radius="@dimen/_6sdp" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/login_back"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/login_msg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:fontFamily="@font/montserrat_semi_bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/loginSubMsg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:fontFamily="@font/montserrat_regular" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/countryPick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/countryFlag"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/flag_in" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/countryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:backgroundTint="@android:color/transparent"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="+91"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:alpha="0.2"
                        android:background="@color/white" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="e.g.98253 80349"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="#50FFFFFF"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:alpha="0.2"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_continue_white"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/continueText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:fontFamily="@font/montserrat_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>